// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserServices should return a failed authorized user: failed authorized user 1`] = `
Object {
  "message": "{ getUser } = insights.chrome.auth",
  "status": 418,
}
`;

exports[`UserServices should return a specific locale cookie value 1`] = `
Object {
  "data": Object {
    "key": "English",
    "value": "en-US",
  },
}
`;

exports[`UserServices should return a successful authorized user: success authorized user 1`] = `
Object {
  "data": "lorem ipsum",
  "message": "{ getUser } = insights.chrome.auth",
  "status": 200,
}
`;

exports[`UserServices should return default locale if no locale cookie is present 1`] = `
Object {
  "data": Object {
    "key": "English",
    "value": "en-US",
  },
}
`;

exports[`UserServices should return the default locale with an invalid ISO_639 code 1`] = `
Object {
  "data": Object {
    "key": "English",
    "value": "en-US",
  },
}
`;
